duniverse/menhirLib.20200211/test/static/bad/positional-identifier-clash.mly
%start<unit> s
%token<unit> A
%%
s : A _1=A  {}
