duniverse/menhirLib.20200211/test/static/bad/positional-identifier-clash.exp
File "positional-identifier-clash.mly", line 4, characters 6-8:
Error: there are multiple producers named _1 in this sequence.
